docs/spec/grammar/conformance/reject/06-missing-arrow.myc
// rejected: a fn must declare its result type with '->'
nodule bad;
fn f(x: Binary{8}) = x
